<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
	    android:id="@+id/images_button_bar"
	    style="@style/navbar"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true" >
	    
        <ImageButton
            android:id="@+id/complete_images_button"
            style="@style/navbar_image_button"
            android:contentDescription="@string/complete_images_button_text"
            android:src="@drawable/navigation_accept" />
        
        <ImageButton
            android:id="@+id/add_image_button"
            style="@style/navbar_image_button"
            android:contentDescription="@string/add_image_button_text"
            android:src="@drawable/content_new_picture" />
             
        <ImageButton
        	android:id="@+id/remove_image_button"
        	style="@style/navbar_image_button"
        	android:contentDescription="@string/remove_image_button_text"
        	android:src="@drawable/remove_image"
        	android:state_enabled="false" />
	    
    </LinearLayout>        
    
    <LinearLayout
        android:id="@+id/audio_button_bar"
        style="@style/navbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible" >
	    
        <ImageButton
        	android:id="@+id/edit_images_button"
        	style="@style/navbar_image_button"
        	android:contentDescription="@string/edit_images_button_text"
        	android:src="@drawable/edit_images" />
	    
	    <ImageButton
        	android:id="@+id/record_button"
        	style="@style/navbar_image_button"
        	android:contentDescription="@string/stopped_record_button_text"
        	android:src="@drawable/device_access_mic" />
	    
	    <ImageButton
        	android:id="@+id/play_button"
        	style="@style/navbar_image_button"
        	android:contentDescription="@string/stopped_play_button_text"
        	android:src="@drawable/av_play"
        	android:state_enabled="false" />
	    
	</LinearLayout>
	
    
    <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/navbar"
        android:background="@color/transparent" >

        <View
            android:layout_height="fill_parent"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_gravity="center" />
        
        <ProgressBar
            android:id="@+id/record_indicator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:visibility="invisible" />
        
        <ProgressBar
            android:id="@+id/play_indicator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:visibility="invisible" />
                
    </LinearLayout>
    
    
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/images_button_bar" />

</RelativeLayout>
